--- a/Style invitacion.css
+++ b/Style invitacion.css
@@ -10,7 +10,7 @@ html, body {
     background-color: rgb(226, 223, 206);
 }
 body {
-    background-image: url(Dylan\ y\ Cami/fondo.JPG);
+    background-image: url(Dylan\ y\ Cami/tubi.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
