--- a/Style invitacion.css
+++ b/Style invitacion.css
@@ -10,7 +10,7 @@ html, body {
     background-color: rgb(226, 223, 206);
 }
 body {
-    background-image: url(Dylan y Cami/adjuntos (3)/Picsart_23-07-18_22-07-13-076.jpg);
+    background-image: url(Dylan\ y\ Cami/fondo.JPG);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
