--- a/Style invitacion.css
+++ b/Style invitacion.css
@@ -276,7 +276,7 @@ body {
     }
 }
 
-@media screen and (max-width:767) {
+@media screen and (max-width: 767px) {
     .navbar-brand {
         padding-bottom: 0%;
     }
@@ -379,6 +379,12 @@ body {
     #fiesta {
         margin-left: 1%;
         width: 97%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .navbar-brand {
+        padding-bottom: 0%;
     }
 }
 
